[package]
name = "enclavescale"
version = "0.1.0"
edition = "2021"
description = "EnclaveScale: Hardware-Assisted Framework for Privacy-Preserving Data Center Power Profiling"
authors = ["Anonymous Authors"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
sha2 = "0.10"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
hex = "0.4"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"